Enable to list commands and statuses
