# openapi.yaml
@@ -66,7 +66,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Device'
+                  $ref: '#/components/schemas/DeviceId'
 
         
         '500':
@@ -218,7 +218,7 @@ components:
           minLength: 1
           example: piba09223
     
-    Device: 
+    Message: 
       description: Physical device or program located on the car.
       type: object 
       properties: 
